Simpler insert stage styles to fix border spacing. Fixes #81

--- a/src/styles/components/timeline/insert-stage/_option-grid.scss
+++ b/src/styles/components/timeline/insert-stage/_option-grid.scss
@@ -1,4 +1,3 @@
-$stage-height: (9 / 16) * 100%;
 $stage-columns: 3;
 $stage-gap: unit(2);
 $stage-width: calc(#{100% / $stage-columns} - #{($stage-columns - 1) * $stage-gap / $stage-columns});
@@ -23,13 +22,7 @@ $component-name: timeline-insert-stage-option-grid;
 
   &__screen,
   &__description {
-    display: inline-flex;
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    align-items: center;
-    justify-content: center;
   }
 
   &__description {
@@ -37,12 +30,9 @@ $component-name: timeline-insert-stage-option-grid;
   }
 
   &__preview {
-    height: 0;
-    padding-bottom: $stage-height;
     border: 2px solid transparent;
     overflow: hidden;
     transition: border-color var(--animation-duration-standard) var(--animation-easing);
     position: relative;
-    background-color: var(--architect-drawer-background--guidance);
   }
 }
